--- a/frontend/public/stylesheets/master.css
+++ b/frontend/public/stylesheets/master.css
@@ -1,119 +1,184 @@
 body {
-  font-family: Arial, Verdana, sans-serif;
-  font-size: 12px;
-  background-color: #fff;
-}
-* {
-  margin: 0px;
-  padding: 0px;
-  text-decoration: none;
-}
-html {
-  height: 100%;
-  margin-bottom: 1px;
-}
-#container {
-  width: 80%;
-  text-align: left;
-  background-color: #fff;
-  margin-right: auto;
-  margin-left: auto;
-}
-#header-container {
-  width: 100%;
-  padding-top: 15px;
-}
-#header-container h1, #header-container h2 {
-  margin-left: 6px;
-  margin-bottom: 6px;
-}
-.spacer {
-  width: 100%;
-  height: 15px;
-}
-hr {
-  border: 0px;
-  color: #ccc;
-  background-color: #cdcdcd;
-  height: 1px;
-  width: 100%;
-  text-align: left;
-}
-h1 {
-  font-size: 28px;
-  color: #c55;
-  background-color: #fff;
-  font-family: Arial, Verdana, sans-serif;
-  font-weight: 300;
-}
-h2 {
-  font-size: 15px;
-  color: #999;
-  font-family: Arial, Verdana, sans-serif;
-  font-weight: 300;
-  background-color: #fff;
-}
-h3 {
-  color: #4d9b12;
-  font-size: 15px;
-  text-align: left;
-  font-weight: 300;
-  padding: 5px;
-  margin-top: 5px;
+  font-size: 13px;
+  font-family: verdana;
+  color: #653;
+  padding: 0;
+  margin: 0;
 }
 
-#left-container {
-  float: left;
-  width: 250px;
-  background-color: #FFFFFF;
-  color: black;
-}
-
-#left-container h3 {
-  color: #c55;
-}
-
-#main-container {
-  margin: 5px 5px 5px 260px;
-  padding: 15px;
-  border-left: 1px solid silver;
-  min-height: 400px;
-}
-p {
-  color: #000;
-  background-color: #fff;
-  line-height: 20px;
-  padding: 5px;
-}
 a {
-  color: #4d9b12;
-  background-color: #fff;
+  outline: none;
   text-decoration: none;
+  color: #fa5;
+  font-weight: bold;
 }
-a:hover {
-  color: #4d9b12;
-  background-color: #fff;
-  text-decoration: underline;
+
+#wrapper {
+  width: 900px;
+  margin: 15px auto;
 }
-#footer-container {
-  clear: both;
-  font-size: 12px;
-  font-family: Verdana, Arial, sans-serif;
+
+#header {
+  height: 100px;
+  position: relative;
 }
-.right {
-  float: right;
-  font-size: 100%;
-  margin-top: 5px;
-  color: #999;
-  background-color: #fff;
+
+#header > a.logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #fa0;
+  font-variant: small-caps;
 }
-.left {
+
+#header > div.sublogo {
+  position: absolute;
+  top: 50px;
+  left: 10px;
+  font-size: 16px;
+  color: #e92;
+}
+
+#header > div.login {
+  position: absolute;
+  right: 0px;
+  top: 15px;
+  border-bottom: 1px solid #fd8;
+  border-left: 1px solid #fd8;
+  padding: 0 10px 10px 20px;
+}
+
+ul#menu {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 30px;
+  position: relative;
+  font-size: 16px;
+}
+
+ul#menu > li {
   float: left;
-  font-size: 100%;
-  margin-top: 5px;
-  color: #999;
-  background-color: #fff;
+  background: #ed9;
+  margin: 0 4px 0 0;
+  height: 30px;
+  line-height: 30px;
+  -moz-border-radius: 10px 10px 0 0;
 }
-#main-container ul {
-  margin-left: 3.0em;
+
+ul#menu > li > a {
+  padding: 10px 40px;
+  color: #985;
+}
+
+ul#menu > li:hover {
+  background: #fa0;
+}
+
+ul#menu > li:hover > a {
+  color: #653;
+}
+ul#menu > li.active {
+  background: #fea;
+  
+}
+
+ul#menu > li > ul {
+  list-style: none;
+  position: absolute;
+  top: 40px;
+  left: 20px;
+  margin: 0;
+  padding: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+ul#menu > li > ul > li {
+  float: left;
+  line-height: 30px;
+  height: 30px;
+  font-size: 14px;
+}
+
+
+ul#menu > li > ul > li > a {
+  margin: 10px 20px;
+  padding: 1px 0;
+  color: #DB9146;
+  font-weight: bold;
+  border-bottom: 1px solid #DB9146;
+}
+
+#content {
+  background: #fea;
+  padding: 60px 40px 40px 40px;
+  text-align: justify;
+}
+
+/* forms */
+form {
+  width: 380px;
+  margin: 10px auto;
+}
+
+fieldset {
+  border: none;
+}
+
+input[type="text"] {
+  width: 200px;
+  height: 20px;
+  padding: 3px;
+  font-size: 16px;
+  border: 1px solid #DB9146;
+  -moz-border-radius: 5px;
+}
+
+select {
+  width: 208px;
+  height: 30px;
+  padding: 3px;
+  font-size: 16px;
+  border: 1px solid #DB9146;
+  -moz-border-radius: 5px;
+}
+
+label {
+  color: #DB9146;
+  font-weight: bold;
+  width: 120px;
+  float: left;
+  line-height: 20px;
+}
+
+.buttons {
+  text-align: center
+}
+.buttons > input {
+  width: 140px;
+  height: 30px;
+  padding: 3px;
+  font-size: 14px;
+  border: 1px solid #DB9146;
+  -moz-border-radius: 5px;
+  background: #fa0;
+  cursor: pointer;
+}
+
+.ctrl {
+  margin: 15px 0px;
+  height: 30px;
+}
+
+/* end forms */
+
+#footer {
+  font-size: 10px;
+  text-align: center;
+  padding: 5px 0;
 }
