Dodany layout anonymous

--- a/frontend/app/views/layout/application.html.haml
+++ b/frontend/app/views/layout/application.html.haml
@@ -16,9 +16,7 @@
         .sublogo
           system do ankietowania
         .login
-          twoj_login
-          %a{ :href => "/logout" }
-            wyloguj
+          = partial 'shared/login'
       #main
         %ul#menu
           %li
