Zmieniona kolorystyka layout'u.

--- a/frontend/app/views/exceptions/unauthenticated.html.haml
+++ b/frontend/app/views/exceptions/unauthenticated.html.haml
@@ -9,5 +9,5 @@
 
 .info
   %h1
-    Czym jest Ankieter?
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ac tortor eu diam volutpat aliquam. Nulla sit amet nibh sed est condimentum vestibulum sit amet quis neque. Vivamus eros sapien, venenatis a sagittis id, tristique sit amet ipsum. In sed erat purus, ut molestie velit.
+    Czym jest Cyfrowy Dorsz?
+  Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit. Mauris ac tortor eu diam volutpat aliquam. Nulla sit amet nibh sed est condimentum vestibulum sit amet quis neque. Vivamus eros sapien, venenatis a sagittis id, tristique sit amet ipsum. In sed erat purus, ut molestie velit.
