--- a/frontend/app/views/layout/anonymous.html.haml
+++ b/frontend/app/views/layout/anonymous.html.haml
@@ -12,7 +12,7 @@
     #wrapper
       #header
         %a.logo{ :href => "#" }
-          Ankieter
+          Cyfrowy Dorsz
         .sublogo
           system do ankietowania
         .login
