--- a/frontend/app/views/layout/application.html.haml
+++ b/frontend/app/views/layout/application.html.haml
@@ -19,7 +19,7 @@
           = partial 'shared/login'
       #main
         %ul#menu
-          %li
+          %li.active
             %a{ :href => "#" }
               Wlazł
             %ul.hidden
@@ -29,10 +29,10 @@
               %li
                 %a{ :href => "#" }
                   Na
-              %li
+              %li.last
                 %a{ :href => "#" }
                   Fotel
-          %li.active
+          %li
             %a{ :href => "#" }
               Kotek
             %ul
@@ -42,7 +42,7 @@
               %li
                 %a{ :href => "#" }
                   Na
-              %li
+              %li.last
                 %a{ :href => "#" }
                   Płotek
           %li
@@ -55,7 +55,7 @@
               %li
                 %a{ :href => "#" }
                   Na
-              %li
+              %li.last
                 %a{ :href => "#" }
                   Sofę
           %li
@@ -68,7 +68,7 @@
               %li
                 %a{ :href => "#" }
                   Na
-              %li
+              %li.last
                 %a{ :href => "#" }
                   I Mruga
         #content
