--- a/frontend/app/views/layout/application.html.haml
+++ b/frontend/app/views/layout/application.html.haml
@@ -1,13 +1,7 @@
 !!! Strict
 %html{ "xml:lang" => "pl", :lang => "pl", :xmlns => "http://www.w3.org/1999/xhtml" }
   %head
-    %meta{ :content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type" }
-    %meta{ :name => "description", :content => "Cyfrowy dorsz" }
-    %meta{ :name => "language", :content => "PL" }
-    %title
-      cyfrowy dorsz
-    = js_include_tag 'jquery.js', 'menu.js', :bundle => 'ankieter.js'
-    = css_include_tag 'master.css', :bundle => 'ankieter.css'
+    = partial 'layout/head'
   %body
     #wrapper
       #header
@@ -18,59 +12,7 @@
         .login
           = partial 'shared/login'
       #main
-        %ul#menu
-          %li.active
-            %a{ :href => "#" }
-              Wlazł
-            %ul.hidden
-              %li
-                %a{ :href => "#" }
-                  Miś
-              %li
-                %a{ :href => "#" }
-                  Na
-              %li.last
-                %a{ :href => "#" }
-                  Fotel
-          %li
-            %a{ :href => "#" }
-              Kotek
-            %ul
-              %li
-                %a{ :href => "#" }
-                  Kotek
-              %li
-                %a{ :href => "#" }
-                  Na
-              %li.last
-                %a{ :href => "#" }
-                  Płotek
-          %li
-            %a{ :href => "#" }
-              Na
-            %ul.hidden
-              %li
-                %a{ :href => "#" }
-                  Dziabąg
-              %li
-                %a{ :href => "#" }
-                  Na
-              %li.last
-                %a{ :href => "#" }
-                  Sofę
-          %li
-            %a{ :href => "#" }
-              Płotek
-            %ul.hidden
-              %li
-                %a{ :href => "#" }
-                  Kotek
-              %li
-                %a{ :href => "#" }
-                  Na
-              %li.last
-                %a{ :href => "#" }
-                  I Mruga
+        = partial 'layout/menu'
         #content
           = catch_content :for_layout
       #footer
