--- a/frontend/app/views/layout/_head.html.haml
+++ b/frontend/app/views/layout/_head.html.haml
@@ -6,5 +6,5 @@
 
 %title
   cyfrowy dorsz
-= js_include_tag 'jquery.js', 'menu.js', :bundle => 'ankieter.js'
+= js_include_tag 'jquery.js', 'menu.js', 'application.js', :bundle => 'ankieter.js'
 = css_include_tag 'master.css', :bundle => 'ankieter.css'
