--- a/frontend/app/views/layout/anonymous.html.haml
+++ b/frontend/app/views/layout/anonymous.html.haml
@@ -4,6 +4,7 @@
     = partial 'layout/head'
   %body
     #wrapper
+      = partial 'layout/flash'
       #header
         %a.logo{ :href => "#" }
           Cyfrowy Dorsz
