--- a/frontend/app/views/layout/application.html.haml
+++ b/frontend/app/views/layout/application.html.haml
@@ -4,9 +4,10 @@
     = partial 'layout/head'
   %body
     #wrapper
+      = partial 'layout/flash'
       #header
         %a.logo{ :href => "#" }
-          Ankieter
+          Cyfrowy Dorsz
         .sublogo
           system do ankietowania
         .login
