Poprawione widoki dla 404 i 406

--- a/frontend/public/stylesheets/master.css
+++ b/frontend/public/stylesheets/master.css
@@ -32,7 +32,15 @@ h1 {
 }
 
 h2 {
-  font-size: 12px;
+  font-size: 14px;
+}
+
+.exception {
+  text-align: center;
+}
+
+.exception img {
+  border: solid 1px #82A360;
 }
 
 #wrapper {
