dodawanie pytan do ankiet

--- a/frontend/app/views/polls/index.html.haml
+++ b/frontend/app/views/polls/index.html.haml
@@ -2,6 +2,8 @@
 %table
   %tr
     %th= "Nazwa ankiety"
+    %th= 'Akcje'
   - @polls.each do |poll|
     %tr
       %td= h(poll.name)
+      %td= link_to(h("Edycja"), resource(poll, :edit))
