--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -1,11 +1,19 @@
-%h2 Edycja ankiety
-= @poll.name
+%h1= "Edycja ankiety "+@poll.name
+
+%h3 Pytania
 %table
   %tr
     %th= 'Tekst pytania'
     %th= 'Rodzaj pytania'
-    %th= 'Akcje'
+    %th= 'Edycja'
+    %th= 'Usuwanie'
     - @poll.questions.each do |question|
-      = partial('questions/question', :question => question)
+      %tr
+        %td= question.text
+        %td= question.question_type
+        %td= link_to("Edytuj", resource(@poll, question, :edit))
+        %td= link_to("Usuń", resource(@poll, question, :delete))
 
+
+%h3 Dodaj nowe pytanie
 = partial('questions/form', :poll => @poll)
