--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -1,6 +1,8 @@
 = form_for(@question, :action => @action, :method => @method) do
   %fieldset
-    = text_field(:text, :label => "Treść pytania")
-    = select(:question_type, :label => "Typ pytania", :collection => Question::TYPES)
-  .ctrl
-    = button("Zapisz pytanie")
+    .ctrl
+      = text_field(:text, :label => "Treść pytania")
+    .ctrl
+      = select(:question_type, :label => "Typ pytania", :collection => Question::TYPES)
+    .ctrl.buttons
+      = submit("Zapisz pytanie")
