prowadzacy widzi, czy tokeny sa zuzyte

--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -4,8 +4,13 @@
     %th= 'Nazwa ankiety'
     %th= 'Wartość'
     %th= 'Ważny do'
+    %th= 'Użyty'
     - @tokens.each do |token|
       %tr
         %td= token.poll.name
         %td= token.value
         %td= token.valid_until
+        - if token.used 
+          %td= "tak"
+        - else
+          %td= "nie"
