redirect do opowiednich widokow po wpisaniu dobrego albo zlego tokena

--- a/frontend/app/views/answers/show.html.haml
+++ b/frontend/app/views/answers/show.html.haml
@@ -1,9 +1,1 @@
-%h1 Twoje ankiety
-%table
-  %tr
-    %th= "Nazwa ankiety"
-    %th= 'Edycja'
-  - @polls.each do |poll|
-    %tr
-      %td= h(poll.name)
-      %td= link_to("Edytuj", resource(poll, :edit))
+to juz nastepny ticket
