Ticket #7 Da się zresetować hasło

--- a/frontend/app/views/users/reset_password.html.haml
+++ b/frontend/app/views/users/reset_password.html.haml
@@ -1,5 +1,8 @@
 %h1= "Zmiana hasła"
 = form(:action => resource(:users, :perform_reset_password), :method => :post) do
-  = text_field(:name => "password", :label => "Nowe hasło")
-  = text_field(:name => "password_confirmation", :label => "Potwierdź nowe hasło")
+  %fieldset
+    = hidden_field(:name => "token", :value => @token)
+    = password_field(:name => "password", :label => "Nowe hasło")
+    = password_field(:name => "password_confirmation", :label => "Potwierdź nowe hasło")
+    = button("Zapisz")
 
