--- a/frontend/app/views/exceptions/unauthenticated.html.haml
+++ b/frontend/app/views/exceptions/unauthenticated.html.haml
@@ -8,6 +8,8 @@
     .ctrl.buttons
       = submit 'Log in'
 
+= link_to("Zapomniałem hasła", resource(:users, :request_reset_password))
+
 .info
   %h1
     Czym jest Cyfrowy Dorsz?
