Ticket #7 Linki w mejlach zawierają nazwę hosta

--- a/frontend/app/views/users/request_reset_password.html.haml
+++ b/frontend/app/views/users/request_reset_password.html.haml
@@ -1,7 +1,7 @@
 %h1= "Zmiana hasła"
 = form(:action => resource(:users, :send_reset_password), :method => :post) do
   %fieldset
-    %legend= "Pod poniższy email przesłany zostanie link służący do resetowania hasła."      
-    = password_field(:name => "email", :label => "Email")
-    = button("Wyślij")
+    %legend= "Pod poniższy email przesłany zostanie link służący do resetowania hasła."
+    .ctrl= text_field(:name => "email", :label => "Email")
+    .ctrl.buttons= button("Wyślij")
 
