--- a/frontend/app/views/users/reset_password.html.haml
+++ b/frontend/app/views/users/reset_password.html.haml
@@ -2,7 +2,7 @@
 = form(:action => resource(:users, :perform_reset_password), :method => :post) do
   %fieldset
     = hidden_field(:name => "token", :value => @token)
-    = password_field(:name => "password", :label => "Nowe hasło")
-    = password_field(:name => "password_confirmation", :label => "Potwierdź nowe hasło")
-    = button("Zapisz")
+    .ctrl= password_field(:name => "password", :label => "Nowe hasło")
+    .ctrl= password_field(:name => "password_confirmation", :label => "Potwierdź nowe hasło")
+    .ctrl.buttons= button("Zapisz")
 
