--- a/frontend/app/views/layout/_menu.html.haml
+++ b/frontend/app/views/layout/_menu.html.haml
@@ -5,6 +5,7 @@
       %li
         =link_to("Lista ankiet", resource(:polls))
       %li
+        =image_tag("/images/add.png", :id => 'add-poll')
         =link_to("Dodaj ankietę", resource(:polls, :new))
   %li
     %a{ :href => "#" }
