--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -1,5 +1,5 @@
 %tr
   %td= h(question.text)
   %td= h(question.question_type)
-  %td= link_to("Edytuj", resource(question.poll, question, :edit))
-  %td= link_to("Usuń", resource(question.poll, question, :delete), :class => 'delete-question')
+  %td= link_to(image_tag('/images/edit.png', :alt => 'edytuj', :title => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
+  %td= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
