--- a/frontend/app/views/exceptions/unauthenticated.html.haml
+++ b/frontend/app/views/exceptions/unauthenticated.html.haml
@@ -12,4 +12,8 @@
 .info
   %h1
     Czym jest Cyfrowy Dorsz?
-  Lorem ipsum dolor sit amet, <a href="#">consectetur</a> adipiscing elit. Mauris ac tortor eu diam volutpat aliquam. Nulla sit amet nibh sed est condimentum vestibulum sit amet quis neque. Vivamus eros sapien, venenatis a sagittis id, tristique sit amet ipsum. In sed erat purus, ut molestie velit.
+  Cyfrowy Dorsz to system służący do anonimowego ankietowania studentów.
+Prowadzący zajęcia mają możliwość wykorzystania wielu rodzajów pytań,
+przeglądania danych oraz ich statystycznej analizy. Ankietowani za
+pośrednictwem gwarantującego unikalność hasła mogą wejść do systemu i odpowiedzieć na
+pytania dotyczące zajęć.
