--- a/frontend/app/views/exceptions/unauthenticated.html.haml
+++ b/frontend/app/views/exceptions/unauthenticated.html.haml
@@ -12,8 +12,4 @@
 .info
   %h1
     Czym jest Cyfrowy Dorsz?
-  Cyfrowy Dorsz to system służący do anonimowego ankietowania studentów.
-Prowadzący zajęcia mają możliwość wykorzystania wielu rodzajów pytań,
-przeglądania danych oraz ich statystycznej analizy. Ankietowani za
-pośrednictwem gwarantującego unikalność hasła mogą wejść do systemu i odpowiedzieć na
-pytania dotyczące zajęć.
+  Cyfrowy Dorsz to system służący do anonimowego ankietowania studentów. Prowadzący zajęcia mają możliwość wykorzystania wielu rodzajów pytań, przeglądania danych oraz ich statystycznej analizy. Ankietowani za pośrednictwem gwarantującego unikalność hasła mogą wejść do systemu i odpowiedzieć na pytania dotyczące zajęć.
