dzialaja testy poprawnosci tokenu

--- a/frontend/app/views/answers/index.html.haml
+++ b/frontend/app/views/answers/index.html.haml
@@ -6,4 +6,4 @@
     .ctrl
       = text_field :token, :label => 'Token'
     .ctrl.buttons
-      = submit 'wypelnij'
+      = submit 'Wypełnij ankietę'
