--- a/frontend/app/views/questions/_question_answer.html.haml
+++ b/frontend/app/views/questions/_question_answer.html.haml
@@ -1,4 +1,5 @@
-%tr
-  %td= h(question.text)
-  %td= h(question.question_type)
-  %td= 'Odpowiedz'
+.ctrl
+  - if question.question_type == "Otwarte"
+    = text_field :name => question.id, :label => question.text
+  - if question.question_type == "Zamknięte"
+    = select(:name => question.id, :label => question.text, :collection => "1".."5")
