--- a/frontend/app/views/questions/_question.html.haml
+++ b/frontend/app/views/questions/_question.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td= h(question.text)
   %td= h(question.question_type)
-  %td= link_to(image_tag('/images/edit.png', :alt => 'edytuj', :title => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
-  %td= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
-  %td= link_to("Odpowiedzi", resource(question.poll, question, :results), :title => "Odpowiedzi do pytania #{h(question.text)}")
+  %td.action= link_to(image_tag('/images/answer.png', :alt => 'odpowiedzi', :title => "Odpowiedzi do pytania #{h(question.text)}"), resource(question.poll, question, :results), :class => 'image-link')
+  %td.action= link_to(image_tag('/images/edit.png', :alt => 'edytuj'), resource(question.poll, question, :edit), :class => 'image-link')
+  %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(question.poll, question, :delete), :class => 'image-link delete-question')
