--- a/frontend/app/views/results/index.html.haml
+++ b/frontend/app/views/results/index.html.haml
@@ -1,5 +1,5 @@
-%h1= "Odpowiedzi na pytanie " + h(@question.text)
+%h1= "Odpowiedzi na pytanie <span class='name'>'#{h(@question.text)}'</span>"
 
-%ul
+%ul.answers
   - @question.question_answers.each do |answer|
     %li= h(answer.value)
