--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -1,11 +1,11 @@
-%h3 Tokeny
+%h1= "Tokeny dla ankiety <span class='name'>'#{h(@poll.name)}'</span>"
 %table
   %tr
     %th= 'Nazwa ankiety'
     %th= 'Wartość'
     %th= 'Ważny do'
     %th= 'Użyty'
-    %th= 'Usuwanie'
+    %th.action
     - @tokens.each do |token|
       %tr
         %td= token.poll.name
@@ -15,4 +15,4 @@
           %td= "tak"
         - else
           %td= "nie"
-        %td= link_to("Usuń", resource(token.poll, token, :delete), :class => 'delete-token')
+        %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(token.poll, token, :delete), :class => 'image-link delete-token')
