--- a/frontend/app/views/questions/create.html.haml
+++ b/frontend/app/views/questions/create.html.haml
@@ -1,1 +1,4 @@
-= partial 'question', :question => @question
+- if @status == 'error'
+  = partial 'new', :question => @question, :poll => @poll
+- else
+  = partial 'question', :question => @question, :poll => @poll
