Przy tworzeniu ankiety prowadzacy moze podac typ zajec

--- a/frontend/app/views/answers/show.html.haml
+++ b/frontend/app/views/answers/show.html.haml
@@ -1,6 +1,6 @@
 %h1= "Wypełnienie ankiety <span class='name'>'#{h(@token.poll.name)}'</span>"
 
-%h3 Pytania
+%h3= "Typ zajęć: #{@token.poll.poll_type}"
 = form :action => url(:controller => "answers", :action => "save_answer") do
   %fieldset
     -@token.poll.questions.each do |question|
