--- a/frontend/app/views/polls/new.html.haml
+++ b/frontend/app/views/polls/new.html.haml
@@ -5,5 +5,7 @@
   %fieldset
     .ctrl
       = text_field :name, :label => "Nazwa"
+    .ctrl
+      = select :poll_type, :label => 'Typ zajęć', :collection => Poll::TYPES
     .ctrl.buttons
       = submit "Stwórz"
