Dodany link do bezposredniego tworzenia nowych tokenow w widoku tokenow

--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -1,4 +1,6 @@
 %h1= "Tokeny dla ankiety <span class='name'>'#{h(@poll.name)}'</span>"
+= link_to("Generuj nowe tokeny", resource(@poll, :tokens, :generate), "method" => "post")
+
 %table
   %tr
     %th= 'Nazwa ankiety'
