--- a/frontend/app/views/questions/_question_answer.html.haml
+++ b/frontend/app/views/questions/_question_answer.html.haml
@@ -1,5 +1,7 @@
 .ctrl
   - if question.open?
     = text_field :name => question.id, :label => question.text
+    %span.validation.error
+      = question.errors.on(:value)
   - if question.closed?
     = select(:name => question.id, :label => question.text, :collection => "1".."5")
