--- a/frontend/app/views/tokens/generate.html.haml
+++ b/frontend/app/views/tokens/generate.html.haml
@@ -1,8 +1,15 @@
+= js_include_tag 'jquery_ui_datepicker.js', 'ui.datepicker-pl.js'
 = form(:action => resource(@poll, :tokens, :save)) do
   %fieldset
     .ctrl
       = text_field(:count, :label => "Ilość tokenów", :value => 10)
     .ctrl
-      = text_field(:valid_until, :label => "Data ważności tokenów", :value=> (DateTime::now()+20).strftime("%Y-%m-%d"))
+      = text_field(:valid_until, :id=>"valid_until", :label => "Data ważności tokenów", :value=> (DateTime::now()+20).strftime("%Y-%m-%d"))
     .ctrl.buttons
       = submit("Generuj tokeny")
+  %script{:type=>"text/javascript"}
+    //<![CDATA[
+    $(function() {
+    $('#valid_until').datepicker();
+    });
+    //]]>
