--- a/frontend/app/views/questions/_form.html.haml
+++ b/frontend/app/views/questions/_form.html.haml
@@ -2,10 +2,10 @@
   .ctrl
     = text_field(:text, :label => "Treść pytania")
     %span.validation.error
-      = question.errors.on(:text)
+      = @question.errors.on(:text)
   .ctrl
     = select(:question_type, :label => "Typ pytania", :collection => Question::TYPES.values)
     %span.validation.error
-      = question.errors.on(:question_type)
+      = @question.errors.on(:question_type)
   .ctrl.buttons
     = submit("Zapisz pytanie")
