--- a/frontend/app/views/questions/_new.html.haml
+++ b/frontend/app/views/questions/_new.html.haml
@@ -1,2 +1,2 @@
-= form_for(:question, :action => resource(poll, :questions), :id => "question-form") do
+= form_for(:question, :action => resource(poll, :questions), :id => "new-question-form") do
   = partial('questions/form', :poll => poll, :question => question)
