--- a/frontend/app/views/questions/edit.html.haml
+++ b/frontend/app/views/questions/edit.html.haml
@@ -1,2 +1,2 @@
-= form_for(@question, :action => resource(@poll, @question), :id => "question-form") do
+= form_for(@question, :action => resource(@poll, @question), :id => "edit-question-form") do
   = partial('questions/form', :poll => @poll)
