--- a/frontend/app/views/polls/edit.html.haml
+++ b/frontend/app/views/polls/edit.html.haml
@@ -1,7 +1,7 @@
 %h1= "Edycja ankiety <span class='name'>'#{h(@poll.name)}'</span>"
 
 %h3 Pytania
-%table{ :id => 'questions' }
+%table.custom{ :id => 'questions' }
   %tr
     %th= 'Tekst pytania'
     %th= 'Rodzaj pytania'
