--- a/frontend/app/views/tokens/generate.html.haml
+++ b/frontend/app/views/tokens/generate.html.haml
@@ -10,6 +10,6 @@
   %script{:type=>"text/javascript"}
     //<![CDATA[
     $(function() {
-    $('#valid_until').datepicker();
+    $('#valid_until').datepicker({ dateFormat: 'yy-mm-dd' });
     });
     //]]>
