--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -1,7 +1,7 @@
 %h1= "Tokeny dla ankiety <span class='name'>'#{h(@poll.name)}'</span>"
 = link_to("Generuj nowe tokeny", resource(@poll, :tokens, :generate), "method" => "post")
 
-%table
+%table.custom
   %tr
     %th= 'Nazwa ankiety'
     %th= 'Wartość'
