--- a/frontend/app/views/tokens/index.html.haml
+++ b/frontend/app/views/tokens/index.html.haml
@@ -15,7 +15,7 @@
     - @tokens_multi.each do |token|
       %tr
         %td= token.poll.name
-        %td= token.value
+        %td= link_to("http://localhost:4000/answers/show/" + token.value, "http://localhost:4000/answers/show/" + token.value)
         %td= token.valid_until
         %td= token.answers.size.to_s + "/" + token.max_usage.to_s
         %td.action= link_to(image_tag('/images/delete.png', :alt => 'usuń', :title => 'usuń'), resource(token.poll, token, :delete), :class => 'image-link delete-token')
